Compiler/tests/typing/bad/testfile-arith-2.rs
struct S 
{ 
    a: i32
}

fn main() 
{ 
    let s : S = S { a: 89 }; 
    s + s;
    
    return;
}
